src/test/ui/error-codes/E0049.stderr
error[E0049]: method `foo` has 0 type parameters but its trait declaration has 1 type parameter
  --> $DIR/E0049.rs:18:5
   |
12 |     fn foo<T: Default>(x: T) -> Self;
   |     --------------------------------- expected 1 type parameter
...
18 |     fn foo(x: bool) -> Self { Bar } //~ ERROR E0049
   |     ^^^^^^^^^^^^^^^^^^^^^^^ found 0 type parameters

error: aborting due to previous error

